--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,7 @@ theme = "hugo-lithium"
 googleAnalytics = ""
 disqusShortname = ""
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
+publishDir = "../AlexLabram.github.io"
 
 [permalinks]
     post = "/:year/:month/:day/:slug/"
